--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
- background-image: url(/html/Untitled\ design.jpg);
+ background-image: url(/my-portfolio/Untitled\ design.jpg);
  margin: 0;
  padding: 0;
  display: inline;
